Adds initial navigation and skeletal contant on index.html
Establishes initial navigation to homepage for styling. Additional
thoughts on possible submenus was pulled into the content of the
page to be fleshed out.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
         <link rel="stylesheet" href="css/primary.min.css">
     </head>
     <body>
-        Hello, World!
+        <h1>Matt Waldrop, Developer</h1>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Overview</a></li>
+                <li><a href="#">Expertise</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#">Social</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <section id="projects">
+            <h2>Projects</h2>
+
+            <h3>Professional Projects</h3>
+            <ul>
+                <li><a href="#agecon"><span class="proper-name">The University of Georgia,</span> <span class="proper-name">Department of Agricultural &amp; Applied Economics,</span> Lead Developer on 2000 departmental site redesign.</a></li>
+                <li><a href="#jnli"><span class="proper-name">Jackson National Life Insurance,</span> Web Team Lead on Web Initiative 2000 global corporate site redesign.</a></li>
+                <li><a href="#threadbear"><span class="proper-name">ThreadBear Fiber Arts Studio,</span> Co-owner, CIO, Web Designer &amp; Developer.</a></li>
+                <li><a href="#crowingram"><span class="proper-name">Crowing Ram</span><span class="proper-name">Fiber Arts</span><span class="proper-name">Business Services,</span> Independent Contractor for Shopify and WordPress site updates and maintenance.</a></li>
+                <li><a href="#fiberwild"><span class="proper-name">FiberWild! A Unique Knit Shop,</span> WordPress module development and Zen Cart landing page production.</a></li>
+                <li><a href="#johndeere"><span class="proper-name">John Deere,</span> Corporate Web Team Content Analyst on Web Initiative 2018 global corporate site redesign.</a></li>
+            </ul>
+
+            <h3>Personal Projects</h3>
+            <ul>
+                <li><a href="#">Logo designs and updates</a></li>
+                <li><a href="#">Comic book price guide API</a></li>
+                <li><a href="#">Sass color palettes and gradients</a></li>
+                <li><a href="#">Sass page templates</a></li>
+                <li><a href="#">Coding cheatsheet posters</a></li>
+            </ul>
+        </section>
     </body>
 </html>
