adds whiskers logo and typography to navbar & narrows text

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>R&eacute;sum&eacute; | Matt Waldrop</title>
+		<link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
@@ -11,7 +12,10 @@
     <body>
         <header>
 
-            <div id="title">mattwaldrop.com</div>
+            <div id="title">
+                <img src="media/logo-mw-white-200-236.png">
+                <div>Matthew<br>Waldrop</div>
+            </div>
 
             <nav>
                 <ul>
