--- a/reference.html
+++ b/reference.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Reference | Matt Waldrop</title>
+		<link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -12,7 +13,10 @@
 	</head>
 	<body>
 		<header>
-			<div id="title">mattwaldrop.com</div>
+			<div id="title">
+				<img src="media/logo-mw-white-200-236.png" />
+				<div>Matthew<br />Waldrop</div>
+			</div>
 
 			<nav>
 				<ul>
