updates summary and objective in index.html

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 extant. You will find below, however, links to a number of websites on which he contributed
                 his expertise.</p>
 
-                <p>Currently, he's studying React.js and associated technologies.</p>
+                <p>Currently, he's seeking a junior React development role after studying the technology for several months.</p>
             </summary>
 
             <h2>SKILLS</h2>
-            <p><strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Flexbox, JavaScript/ES6, PHP, Bootstrap 5, PostgresQL/MySQL</p> 
+            <p><strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Flexbox, JavaScript/ES6, PHP, Bootstrap 5, PostgresQL/MySQL, React.js, Node.js, npm, Express.js</p> 
             <p><strong>Tools:</strong> WordPress/Drupal/Shopify, Photoshop/Illustrator/InDesign, XD/Sketch, Git/GitHub, VSCode</p>
             <p><strong>Soft Skills:</strong> UI/UX interviewing/planning, SEO, agile methodology, QA, page and image optimization, accessibility/WCAG</p>
 
