Adds link to code for threadbear.mattwaldrop.com on GitHub.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <li>Plan, buy, and merchandise inventory.</li>
             </ul>
             <p><a href="https://threadbear.mattwaldrop.com" target="braham">[Site at the time of departure &mdash; hosted live]</a>(https://threadbear.mattwaldrop.com)</p>
+            <p><a href="https://github.com/crowingram/threadbear" target="braham">[Code]</a>(https://github.com/crowingram/threadbear)</p>
                           
             <h3>Front-End Team Lead (Web Initiative 2000 project)</h3>
             <p><strong>Jackson National Life Insurance, Okemos MI</strong> <em>June 1999&ndash;September 2000</em></p>
