Adds alt='' attributes to logo image

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 		<header>
 
             <div id="title">
-                <img src="media/logo-mw-white-200-236.png">
+                <img src="media/logo-mw-white-200-236.png" alt="">
                 <div>Matthew<br>Waldrop</div>
             </div>
 
@@ -52,7 +52,7 @@
 				&mdash; Discrete Mathematics &mdash; Typography &mdash; Symbols
 			</p>
 			<p>
-				<strong>Longterm goals:</strong> Ph. D., Computer Science
+				<strong>Long-term goals:</strong> Ph. D., Computer Science
 				<em>(post-secondary instruction)</em>
 			</p>
 
