--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
 
             <div id="title">
-                <img src="media/logo-mw-white-200-236.png">
+                <img src="media/logo-mw-white-200-236.png" alt="">
                 <div>Matthew<br>Waldrop</div>
             </div>
 
