--- a/reference.html
+++ b/reference.html
@@ -14,7 +14,7 @@
 	<body>
 		<header>
 			<div id="title">
-				<img src="media/logo-mw-white-200-236.png" />
+				<img src="media/logo-mw-white-200-236.png" alt="" />
 				<div>Matthew<br />Waldrop</div>
 			</div>
 
