Adds encoding and viewport settings

--- a/about.html
+++ b/about.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>About | Matt Waldrop</title>
-		<link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="css/primary.css" />
-	</head>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About | Matt Waldrop</title>
+            <link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
+            <link rel="preconnect" href="https://fonts.googleapis.com" />
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+            <link
+                href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap"
+                rel="stylesheet"
+            />
+            <link rel="stylesheet" href="css/primary.css" />
+    </head>
 	<body>
 		<header>
 
@@ -52,7 +55,7 @@
 				&mdash; Discrete Mathematics &mdash; Typography &mdash; Symbols
 			</p>
 			<p>
-				<strong>Long-term goals:</strong> Ph. D., Computer Science
+				<strong>Longterm goals:</strong> Ph. D., Computer Science
 				<em>(post-secondary instruction)</em>
 			</p>
 
