Adds Tesla front page walkthrough to Reference page.

--- a/reference.html
+++ b/reference.html
@@ -77,9 +77,31 @@
 						>[CSS-TRICKS: A Complete Guide to Flexbox]</a
 					>(https://css-tricks.com/snippets/css/a-guide-to-flexbox/)
 				</p>
+				<h3>React</h3>
+				<p>
+					<a
+						href="https://distracted-ardinghelli-4bf536.netlify.app/"
+						target="braham"
+						>[STUDY | Tesla front page clone]</a
+					>(https://distracted-ardinghelli-4bf536.netlify.app/)
+				</p>
+				<p>
+					<a
+						href="https://github.com/crowingram/study-tesla-clone"
+						target="braham2"
+						>[GitHub repository for Tesla front page clone]</a
+					>(https://github.com/crowingram/study-tesla-clone)
+				</p>
+				<p>
+					This project is a walk-through of a superficial replication of the
+					Tesla front page by Clever Programmer on YouTube at
+					<a href="https://youtu.be/0mVbNp1ol_w"
+						>[https://youtu.be/0mVbNp1ol_w]</a
+					>. The project makes ample use of styled-components and minimal use of
+					Redux.
+				</p>
 				<!-- <h3>Grid</h3>
 			<h2>JavaScript</h2>
-			<h3>React</h3>
 			<h3>Express</h3>
 			<h3>Node</h3>
 			<h2>PostgresQL</h2>
