Updates Elyx clone URL

--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
 				</p>
 				<p>
 					Ongoing project at
-					<a href="https://elyx.mattwaldrop.com" target="braham2"
-						>[https://elyx.mattwaldrop.com]</a
+					<a href="https://jovial-bhaskara-1d3d91.netlify.app/" target="braham2"
+						>[https://jovial-bhaskara-1d3d91.netlify.app/]</a
 					>.
 				</p>
 			</div>
