adds profile links to GitHub and LinkedIn to About

--- a/about.html
+++ b/about.html
@@ -35,6 +35,15 @@
 			<div class="main-content">
 			<h1>About Matthew Waldrop</h1>
 
+			<h2>Links</h2>
+			<p>
+					<a href="https://www.linkedin.com/in/mrwaldrop">[Linkedin Profile]</a
+					><span>(https://www.linkedin.com/in/mrwaldrop)</span>
+				</p><p>
+					<a href="https://github.com/crowingram">[GitHub Profile]</a
+					><span>(https://github.com/crowingram)</span>
+				</p>
+
 			<h2>Biography</h2>
 			<h3>Location</h3>
 			<p><strong>Hometown:</strong> LaGrange, Georgia</p>
