--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>HOME | Matt Waldrop</title>
+		<title>HOME | Matthew Waldrop</title>
 		<link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -280,6 +280,12 @@
 					Ongoing project at
 					<a href="https://jovial-bhaskara-1d3d91.netlify.app/" target="braham2"
 						>[https://jovial-bhaskara-1d3d91.netlify.app/]</a
+					>.
+				</p>
+				<p>
+					Code available at
+					<a href="https://github.com/crowingram/study-absolut" target="braham"
+						>[https://github.com/crowingram/study-absolut]</a
 					>.
 				</p>
 			</div>
