Add Projects page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<nav>
 				<ul>
 					<li>R&eacute;sum&eacute;</li>
+					<li><a href="/projects.html">Projects</a></li>
 					<li><a href="/about.html">About</a></li>
 					<li><a href="/reference.html">Reference</a></li>
 				</ul>
