--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
 			<nav>
 				<ul>
 					<li><a href="/index.html">R&eacute;sum&eacute;</a></li>
+					<li><a href="/projects.html">Projects</a></li>
 					<li>About</li>
 					<li><a href="/reference.html">Reference</a></li>
 				</ul>
