--- a/reference.html
+++ b/reference.html
@@ -24,6 +24,7 @@
 			<nav>
 				<ul>
 					<li><a href="/index.html">R&eacute;sum&eacute;</a></li>
+					<li><a href="/projects.html">Projects</a></li>
 					<li><a href="/about.html">About</a></li>
 					<li>Reference</li>
 				</ul>
