Soften colors and verify accessibility

--- a/reference.html
+++ b/reference.html
@@ -40,7 +40,7 @@
 				<p>
 					<a href="https://docs.emmet.io/cheat-sheet/" target="braham"
 						>[Emmet.io: Emmet Cheat Sheet]</a
-					>(https://docs.emmet.io/cheat-sheet/)
+					><span>(https://docs.emmet.io/cheat-sheet/)</span>
 				</p>
 				<h3>Semantic HTML</h3>
 				<p>
@@ -48,7 +48,9 @@
 						href="https://www.w3schools.com/html/html5_semantic_elements.asp"
 						target="braham"
 						>[W3Schools: HTML Semantic Elements]</a
-					>(https://www.w3schools.com/html/html5_semantic_elements.asp)
+					><span
+						>(https://www.w3schools.com/html/html5_semantic_elements.asp)</span
+					>
 				</p>
 				<h3>SEO Best Practices (2021)</h3>
 				<p>
@@ -57,7 +59,9 @@
 						target="braham"
 						>[SEONeurons: HTML5 Page Structure best practice for SEO of
 						website]</a
-					>(https://seoneurons.com/seo/html5-page-structure-best-practices/)
+					><span
+						>(https://seoneurons.com/seo/html5-page-structure-best-practices/)</span
+					>
 				</p>
 
 				<h2>CSS</h2>
@@ -68,7 +72,7 @@
 						href="https://frontend30.com/css-selectors-cheatsheet/"
 						target="braham"
 						>[FrontEnd30: CSS Selector Cheatsheet]</a
-					>(https://frontend30.com/css-selectors-cheatsheet/)
+					><span>(https://frontend30.com/css-selectors-cheatsheet/)</span>
 				</p>
 				<h3>Flex</h3>
 				<p>
@@ -76,30 +80,15 @@
 						href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
 						target="braham"
 						>[CSS-TRICKS: A Complete Guide to Flexbox]</a
-					>(https://css-tricks.com/snippets/css/a-guide-to-flexbox/)
+					><span
+						>(https://css-tricks.com/snippets/css/a-guide-to-flexbox/)</span
+					>
 				</p>
-				<h3>React</h3>
+				<h3>Reset</h3>
 				<p>
-					<a
-						href="https://distracted-ardinghelli-4bf536.netlify.app/"
-						target="braham"
-						>[STUDY | Tesla front page clone]</a
-					>(https://distracted-ardinghelli-4bf536.netlify.app/)
-				</p>
-				<p>
-					<a
-						href="https://github.com/crowingram/study-tesla-clone"
-						target="braham2"
-						>[GitHub repository for Tesla front page clone]</a
-					>(https://github.com/crowingram/study-tesla-clone)
-				</p>
-				<p>
-					This project is a walk-through of a superficial replication of the
-					Tesla front page by Clever Programmer on YouTube at
-					<a href="https://youtu.be/0mVbNp1ol_w"
-						>[https://youtu.be/0mVbNp1ol_w]</a
-					>. The project makes ample use of styled-components and minimal use of
-					Redux.
+					<a href="https://piccalil.li/blog/a-modern-css-reset/"
+						>[Andy Bell's Modern CSS Reset]</a
+					><span>(https://piccalil.li/blog/a-modern-css-reset/)</span>
 				</p>
 				<!-- <h3>Grid</h3>
 			<h2>JavaScript</h2>
