--- a/reference.html
+++ b/reference.html
@@ -38,7 +38,7 @@
 				<h2>HTML</h2>
 				<h3>Emmet</h3>
 				<p>
-					<a href="https://docs.emmet.io/cheat-sheet/" target="braham"
+					<a href="https://docs.emmet.io/cheat-sheet/" target="_blank"
 						>[Emmet.io: Emmet Cheat Sheet]</a
 					><span>(https://docs.emmet.io/cheat-sheet/)</span>
 				</p>
@@ -46,7 +46,7 @@
 				<p>
 					<a
 						href="https://www.w3schools.com/html/html5_semantic_elements.asp"
-						target="braham"
+						target="_blank"
 						>[W3Schools: HTML Semantic Elements]</a
 					><span
 						>(https://www.w3schools.com/html/html5_semantic_elements.asp)</span
@@ -56,7 +56,7 @@
 				<p>
 					<a
 						href="https://seoneurons.com/seo/html5-page-structure-best-practices/"
-						target="braham"
+						target="_blank"
 						>[SEONeurons: HTML5 Page Structure best practice for SEO of
 						website]</a
 					><span
@@ -70,7 +70,7 @@
 				<p>
 					<a
 						href="https://frontend30.com/css-selectors-cheatsheet/"
-						target="braham"
+						target="_blank"
 						>[FrontEnd30: CSS Selector Cheatsheet]</a
 					><span>(https://frontend30.com/css-selectors-cheatsheet/)</span>
 				</p>
@@ -78,7 +78,7 @@
 				<p>
 					<a
 						href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
-						target="braham"
+						target="_blank"
 						>[CSS-TRICKS: A Complete Guide to Flexbox]</a
 					><span
 						>(https://css-tricks.com/snippets/css/a-guide-to-flexbox/)</span
@@ -86,7 +86,7 @@
 				</p>
 				<h3>Reset</h3>
 				<p>
-					<a href="https://piccalil.li/blog/a-modern-css-reset/"
+					<a href="https://piccalil.li/blog/a-modern-css-reset/" target="_blank"
 						>[Andy Bell's Modern CSS Reset]</a
 					><span>(https://piccalil.li/blog/a-modern-css-reset/)</span>
 				</p>
@@ -95,7 +95,7 @@
 			<h3>Express</h3>
 			<h3>Node</h3>
 			<h2>PostgresQL</h2>
-			<p><a href="" target="braham"></a></p> -->
+			<p><a href="" target="_blank"></a></p> -->
 			</div>
 		</main>
 		<footer>
