Add WhoCanUse to Reference page

--- a/reference.html
+++ b/reference.html
@@ -90,12 +90,12 @@
 						>[Andy Bell's Modern CSS Reset]</a
 					><span>(https://piccalil.li/blog/a-modern-css-reset/)</span>
 				</p>
-				<!-- <h3>Grid</h3>
-			<h2>JavaScript</h2>
-			<h3>Express</h3>
-			<h3>Node</h3>
-			<h2>PostgresQL</h2>
-			<p><a href="" target="_blank"></a></p> -->
+				<h2>Accessibility</h2>
+				<h3>Color</h3>
+				<p>
+					<a href="https://whocanuse.com/">[Who can use]</a
+					><span>(https://whocanuse.com/)</span>
+				</p>
 			</div>
 		</main>
 		<footer>
