--- a/index.html
+++ b/index.html
@@ -66,20 +66,78 @@
 				<h2>SKILLS</h2>
 				<p>
 					<strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Flexbox,
-					JavaScript/ES6, PHP, Bootstrap 5, PostgresQL/MySQL, React.js, Node.js,
-					npm, Express.js
+					JavaScript/ES6, PHP, Foundation, MySQL/MongoDB, Vue, Node.js,
+					npm
 				</p>
 				<p>
-					<strong>Tools:</strong> WordPress/Drupal/Shopify,
-					Photoshop/Illustrator/InDesign, XD/Sketch, Git/GitHub, VSCode
+					<strong>Tools:</strong> Git/GitHub, VSCode, WordPress/Shopify,
+					Photoshop/Illustrator/InDesign, XD/Sketch
 				</p>
 				<p>
-					<strong>Soft Skills:</strong> UI/UX interviewing/planning, SEO, agile
+					<strong>Soft Skills:</strong> UI/UX interviewing/planning, agile
 					methodology, QA, page and image optimization, accessibility/WCAG
 				</p>
 
 				<h2>EXPERIENCE, Web Development</h2>
 
+				<h3>CMS Developer I, Professional Services Team</h3>
+				<p>
+					<strong
+						>Simpleview, Inc., Tucson AZ (remote)</strong
+					>
+					<em>February 2022&ndash;August 2023</em>
+				</p>
+				<ul>
+					<li>Provide HTML, CSS, JavaScript, and Mustache support for premium web-development and CMS hosting clientele including Destination Marketing Organizations of Las Vegas, New York State, Atlantic City, Palm Springs, and Irving, Texas.</li>
+					<li>Perform updates and searches on the backend databases of various clients via MongoDB and JavaScript.</li>
+					<li>Troubleshoot issues via chat with entire development staff including production and support.</li>
+					<li>Document all time and pertinent activities via in-house ticket management system.</li>
+				</ul>
+				<p>
+					<a
+						href="https://www.visitgreaterpalmsprings.com/"
+						target="braham"
+						>[Visit Greater Palm Springs, site my team supported]</a
+					><span
+						>(https://www.visitgreaterpalmsprings.com/)</span
+					>
+				</p>
+				<p>
+					<a
+						href="https://www.iloveny.com/"
+						target="braham"
+						>[ILOVENY, site my team supported]</a
+					><span
+						>(https://www.iloveny.com/)</span
+					>
+				</p>
+				<p>
+					<a
+						href="https://www.visitlasvegas.com/"
+						target="braham"
+						>[Visit Las Vegas, site my team supported]</a
+					><span
+						>(https://www.visitlasvegas.com/)</span
+					>
+				</p>
+				<p>
+					<a
+						href="https://www.visitatlanticcity.com/"
+						target="braham"
+						>[Visit Atlantic City, site my team supported]</a
+					><span
+						>(https://www.visitatlanticcity.com/)</span
+					>
+				</p>
+				<p>
+					<a
+						href="https://www.irvingtexas.com/"
+						target="braham"
+						>[Visit Irving, Texas, site my team supported]</a
+					><span
+						>(https://www.irvingtexas.com/)</span
+					>
+				</p>
 				<h3>Web Content Analyst, Corporate Team</h3>
 				<p>
 					<strong
