Update copyright date

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			<nav>
 				<ul>
-					<li>R&eacute;sum&eacute;</li>
+					<li>Resume</li>
 					<li><a href="/projects.html">Projects</a></li>
 					<li><a href="/about.html">About</a></li>
 					<li><a href="/reference.html">Reference</a></li>
@@ -48,13 +48,12 @@
 
 				<summary>
 					<p>
-						Below, find the professional r&eacute;sum&eacute; of web developer,
-						Matthew Waldrop. Matt has roughly eight years of dedicated web
-						development experience primarily in HTML, CSS/SCSS, JavaScript, and
-						PHP. He's also worked on multiple WordPress sites and two Drupal
-						sites all of which are no longer extant. You will find below,
-						however, links to a number of websites on which he contributed his
-						expertise.
+						Below, find the professional resume of web developer, Matthew
+						Waldrop. Matt has roughly eight years of dedicated web development
+						experience primarily in HTML, CSS/SCSS, JavaScript, and PHP. He's
+						also worked on multiple WordPress sites and two Drupal sites all of
+						which are no longer extant. You will find below, however, links to a
+						number of websites on which he contributed his expertise.
 					</p>
 
 					<p>
@@ -66,8 +65,7 @@
 				<h2>SKILLS</h2>
 				<p>
 					<strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Flexbox,
-					JavaScript/ES6, PHP, Foundation, MySQL/MongoDB, Vue, Node.js,
-					npm
+					JavaScript/ES6, PHP, Foundation, MySQL/MongoDB, Vue, Node.js, npm
 				</p>
 				<p>
 					<strong>Tools:</strong> Git/GitHub, VSCode, WordPress/Shopify,
@@ -82,61 +80,53 @@
 
 				<h3>CMS Developer I, Professional Services Team</h3>
 				<p>
-					<strong
-						>Simpleview, Inc., Tucson AZ (remote)</strong
-					>
+					<strong>Simpleview, Inc., Tucson AZ (remote)</strong>
 					<em>February 2022&ndash;August 2023</em>
 				</p>
 				<ul>
-					<li>Provide HTML, CSS, JavaScript, and Mustache support for premium web-development and CMS hosting clientele including Destination Marketing Organizations of Las Vegas, New York State, Atlantic City, Palm Springs, and Irving, Texas.</li>
-					<li>Perform updates and searches on the backend databases of various clients via MongoDB and JavaScript.</li>
-					<li>Troubleshoot issues via chat with entire development staff including production and support.</li>
-					<li>Document all time and pertinent activities via in-house ticket management system.</li>
+					<li>
+						Provide HTML, CSS, JavaScript, and Mustache support for premium
+						web-development and CMS hosting clientele including Destination
+						Marketing Organizations of Las Vegas, New York State, Atlantic City,
+						Palm Springs, and Irving, Texas.
+					</li>
+					<li>
+						Perform updates and searches on the backend databases of various
+						clients via MongoDB and JavaScript.
+					</li>
+					<li>
+						Troubleshoot issues via chat with entire development staff including
+						production and support.
+					</li>
+					<li>
+						Document all time and pertinent activities via in-house ticket
+						management system.
+					</li>
 				</ul>
 				<p>
-					<a
-						href="https://www.visitgreaterpalmsprings.com/"
-						target="braham"
+					<a href="https://www.visitgreaterpalmsprings.com/" target="braham"
 						>[Visit Greater Palm Springs, site my team supported]</a
-					><span
-						>(https://www.visitgreaterpalmsprings.com/)</span
-					>
+					><span>(https://www.visitgreaterpalmsprings.com/)</span>
 				</p>
 				<p>
-					<a
-						href="https://www.iloveny.com/"
-						target="braham"
+					<a href="https://www.iloveny.com/" target="braham"
 						>[ILOVENY, site my team supported]</a
-					><span
-						>(https://www.iloveny.com/)</span
-					>
+					><span>(https://www.iloveny.com/)</span>
 				</p>
 				<p>
-					<a
-						href="https://www.visitlasvegas.com/"
-						target="braham"
+					<a href="https://www.visitlasvegas.com/" target="braham"
 						>[Visit Las Vegas, site my team supported]</a
-					><span
-						>(https://www.visitlasvegas.com/)</span
-					>
+					><span>(https://www.visitlasvegas.com/)</span>
 				</p>
 				<p>
-					<a
-						href="https://www.visitatlanticcity.com/"
-						target="braham"
+					<a href="https://www.visitatlanticcity.com/" target="braham"
 						>[Visit Atlantic City, site my team supported]</a
-					><span
-						>(https://www.visitatlanticcity.com/)</span
-					>
+					><span>(https://www.visitatlanticcity.com/)</span>
 				</p>
 				<p>
-					<a
-						href="https://www.irvingtexas.com/"
-						target="braham"
+					<a href="https://www.irvingtexas.com/" target="braham"
 						>[Visit Irving, Texas, site my team supported]</a
-					><span
-						>(https://www.irvingtexas.com/)</span
-					>
+					><span>(https://www.irvingtexas.com/)</span>
 				</p>
 				<h3>Web Content Analyst, Corporate Team</h3>
 				<p>
@@ -328,7 +318,7 @@
 			</div>
 		</main>
 		<footer>
-			<p>&copy; Matthew Waldrop, 2021</p>
+			<p>&copy; Matthew Waldrop, 2024</p>
 			<p>All rights reserved</p>
 		</footer>
 	</body>
