--- a/reference.html
+++ b/reference.html
@@ -23,7 +23,7 @@
 
 			<nav>
 				<ul>
-					<li><a href="/index.html">R&eacute;sum&eacute;</a></li>
+					<li><a href="/index.html">Resume</a></li>
 					<li><a href="/projects.html">Projects</a></li>
 					<li><a href="/about.html">About</a></li>
 					<li>Reference</li>
@@ -99,7 +99,7 @@
 			</div>
 		</main>
 		<footer>
-			<p>&copy; Matthew Waldrop, 2021</p>
+			<p>&copy; Matthew Waldrop, 2024</p>
 			<p>All rights reserved</p>
 		</footer>
 	</body>
