--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
 			<nav>
 				<ul>
-					<li><a href="/index.html">R&eacute;sum&eacute;</a></li>
+					<li><a href="/index.html">Resume</a></li>
 					<li><a href="/projects.html">Projects</a></li>
 					<li>About</li>
 					<li><a href="/reference.html">Reference</a></li>
@@ -90,7 +90,7 @@
 		</div>
 		</main>
 		<footer>
-			<p>&copy; Matthew Waldrop, 2021</p>
+			<p>&copy; Matthew Waldrop, 2024</p>
 			<p>All rights reserved</p>
 		</footer>
 	</body>
