Changed Left to Withdrew

--- a/index.html
+++ b/index.html
@@ -56,16 +56,13 @@
 						number of websites on which he contributed his expertise.
 					</p>
 
-					<p>
-						Currently, he's seeking a web development role.
-					</p>
+					<p>Currently, he's seeking a web development role.</p>
 				</summary>
 
 				<h2>SKILLS</h2>
 				<p>
 					<strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Flexbox,
-					JavaScript/ES6, PHP, MySQL/MongoDB, Vue, Node.js,
-					npm
+					JavaScript/ES6, PHP, MySQL/MongoDB, Vue, Node.js, npm
 				</p>
 				<p>
 					<strong>Tools:</strong> Git/GitHub, VSCode, WordPress/Shopify,
@@ -84,10 +81,24 @@
 					<em>February 2022&ndash;August 2023</em>
 				</p>
 				<ul>
-					<li>Provide HTML, CSS, JavaScript, and Mustache support for premium web-development and CMS hosting clientele including Destination Marketing Organizations of Las Vegas, New York State, Atlantic City, Palm Springs, and Irving, Texas.</li>
-					<li>Perform updates and searches on the backend databases of various clients via MongoDB and JavaScript.</li>
-					<li>Troubleshoot issues via chat with entire development staff including production and support.</li>
-					<li>Document all time and pertinent activities via in-house ticket management system.</li>
+					<li>
+						Provide HTML, CSS, JavaScript, and Mustache support for premium
+						web-development and CMS hosting clientele including Destination
+						Marketing Organizations of Las Vegas, New York State, Atlantic City,
+						Palm Springs, and Irving, Texas.
+					</li>
+					<li>
+						Perform updates and searches on the backend databases of various
+						clients via MongoDB and JavaScript.
+					</li>
+					<li>
+						Troubleshoot issues via chat with entire development staff including
+						production and support.
+					</li>
+					<li>
+						Document all time and pertinent activities via in-house ticket
+						management system.
+					</li>
 				</ul>
 				<p>
 					<a href="https://www.visitgreaterpalmsprings.com/" target="braham"
@@ -296,7 +307,7 @@
 
 				<h3>Senior Standing, Computer Science BS Program</h3>
 				<strong>LaGrange College, LaGrange GA</strong> <em>1994&ndash;1998</em>
-				<p>Left under heavy Y2K recruitment</p>
+				<p>Withdrew under heavy Y2K recruitment</p>
 				<p>
 					<strong>Awards:</strong> Outstanding CS Freshman, Outstanding CS
 					Sophomore, Outstanding CS Major (first time awarded to a Junior)
