Update Flexbox to Foundation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 				<h2>SKILLS</h2>
 				<p>
-					<strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Flexbox,
+					<strong>Languages:</strong> Semantic HTML5, CSS3/SCSS/Foundation,
 					JavaScript/ES6, PHP, MySQL/MongoDB, Vue, Node.js, npm
 				</p>
 				<p>
