--- a/reference.html
+++ b/reference.html
@@ -5,6 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Reference | Matt Waldrop</title>
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href="/media/logo-mw-white-goatee.ico"
+		/>
 		<link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
