--- a/about.html
+++ b/about.html
@@ -5,14 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About | Matt Waldrop</title>
-            <link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
-            <link rel="preconnect" href="https://fonts.googleapis.com" />
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-            <link
-                href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap"
-                rel="stylesheet"
-            />
-            <link rel="stylesheet" href="css/primary.css" />
+				<link rel="icon" type="image/x-icon" href="/media/logo-mw-white-goatee.ico">
+				<link rel="stylesheet" href="https://use.typekit.net/hta3vcb.css" />
+				<link rel="preconnect" href="https://fonts.googleapis.com" />
+				<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+				<link
+						href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap"
+						rel="stylesheet"
+				/>
+				<link rel="stylesheet" href="css/primary.css" />
     </head>
 	<body>
 		<header>
