add Peanut Shop update

--- a/index.html
+++ b/index.html
@@ -106,27 +106,27 @@
 					</li>
 				</ul>
 				<p>
-					<a href="https://www.visitgreaterpalmsprings.com/" target="braham"
+					<a href="https://www.visitgreaterpalmsprings.com/" target="external"
 						>[Visit Greater Palm Springs, site my team supported]</a
 					><span>(https://www.visitgreaterpalmsprings.com/)</span>
 				</p>
 				<p>
-					<a href="https://www.iloveny.com/" target="braham"
+					<a href="https://www.iloveny.com/" target="external"
 						>[ILOVENY, site my team supported]</a
 					><span>(https://www.iloveny.com/)</span>
 				</p>
 				<p>
-					<a href="https://www.visitlasvegas.com/" target="braham"
+					<a href="https://www.visitlasvegas.com/" target="external"
 						>[Visit Las Vegas, site my team supported]</a
 					><span>(https://www.visitlasvegas.com/)</span>
 				</p>
 				<p>
-					<a href="https://www.visitatlanticcity.com/" target="braham"
+					<a href="https://www.visitatlanticcity.com/" target="external"
 						>[Visit Atlantic City, site my team supported]</a
 					><span>(https://www.visitatlanticcity.com/)</span>
 				</p>
 				<p>
-					<a href="https://www.irvingtexas.com/" target="braham"
+					<a href="https://www.irvingtexas.com/" target="external"
 						>[Visit Irving, Texas, site my team supported]</a
 					><span>(https://www.irvingtexas.com/)</span>
 				</p>
@@ -161,14 +161,14 @@
 				<p>
 					<a
 						href="https://web.archive.org/web/20180605100948/https://www.deere.com/en/"
-						target="braham"
+						target="external"
 						>[Site at the time of departure]</a
 					><span
 						>(https://web.archive.org/web/20180605100948/https://www.deere.com/en/)</span
 					>
 				</p>
 
-				<h3>WordPress & Zen Cart [PHP] Developer & Marketer</h3>
+				<h3>WordPress &amp; Zen Cart [PHP] Developer &amp; Marketer</h3>
 				<p>
 					<strong>FiberWild! A Unique Knit Shop, Galena IL</strong>
 					<em>December 2014&ndash;November 2016</em>
@@ -200,7 +200,7 @@
 					</li>
 				</ul>
 				<p>
-					<a href="/fiberwild-ideas.html" target="braham"
+					<a href="/fiberwild-ideas.html" target="external"
 						>[Site at the time of departure]</a
 					><span>(https://www.mattwaldrop.com/fiberwild-ideas.html)</span>
 				</p>
@@ -219,14 +219,14 @@
 				<p>
 					<a
 						href="https://web.archive.org/web/20161012003147/http://www.fiberwild.com/index.php"
-						target="braham"
+						target="external"
 						>[Site at the time of departure]</a
 					><span
 						>(https://web.archive.org/web/20161012003147/http://www.fiberwild.com/index.php)</span
 					>
 				</p>
 
-				<h3>PHP & WordPress Developer, Owner-Operator</h3>
+				<h3>PHP &amp; WordPress Developer, Owner-Operator</h3>
 				<p>
 					<strong>ThreadBear Fiber Arts Studio, Lansing MI</strong>
 					<em>December 2001&ndash;September 2009</em>
@@ -252,12 +252,12 @@
 					<li>Plan, buy, and merchandise inventory.</li>
 				</ul>
 				<p>
-					<a href="https://threadbear.mattwaldrop.com" target="braham"
+					<a href="https://threadbear.mattwaldrop.com" target="external"
 						>[Site at the time of departure &mdash; hosted live]</a
 					><span>(https://threadbear.mattwaldrop.com)</span>
 				</p>
 				<p>
-					<a href="https://github.com/crowingram/threadbear" target="braham"
+					<a href="https://github.com/crowingram/threadbear" target="external"
 						>[Code]</a
 					><span>(https://github.com/crowingram/threadbear)</span>
 				</p>
@@ -283,7 +283,7 @@
 				<p>
 					<a
 						href="https://web.archive.org/web/20020927112704/http://www.jnl.com/"
-						target="braham"
+						target="external"
 						>[Site at the time of departure]</a
 					><span
 						>(https://web.archive.org/web/20020927112704/http://www.jnl.com/)</span
@@ -291,6 +291,14 @@
 				</p>
 
 				<h2>EXPERIENCE, Gaps</h2>
+
+				<h3>Meat Clerk</h3>
+				<strong>Harris Teeter, Williamsburg VA</strong>
+				<em>April 2025&ndash;Present</em>
+
+				<h3>Store Manager</h3>
+				<strong>The Peanut Shop of Williamsburg, Williamsburg VA</strong>
+				<em>May 2024&ndash;March 2025</em>
 
 				<h3>Store Manager, Regional Manager</h3>
 				<strong>Galena Garlic Company, Galena IL</strong>
@@ -301,7 +309,7 @@
 				<p>
 					<a
 						href="https://web.archive.org/web/20110304145558/http://www.crowingram.com/"
-						target="braham"
+						target="external"
 						>[Site at the time of departure]</a
 					><span
 						>(https://web.archive.org/web/20110304145558/http://www.crowingram.com/)</span
@@ -320,7 +328,7 @@
 			</div>
 		</main>
 		<footer>
-			<p>&copy; Matthew Waldrop, 2024</p>
+			<p>&copy; Matthew Waldrop, 2025</p>
 			<p>All rights reserved</p>
 		</footer>
 	</body>
