Update about.html copyright date

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 				Columbus, Indiana &mdash; Lansing, Michigan &mdash; Raleigh, Charlotte,
 				and Greensboro, North Carolina
 			</p>
-			<p><strong>Current city:</strong> Greensboro, North Carolina</p>
+			<p><strong>Current city:</strong> Williamsburg, Virginia</p>
 
 			<h2>Education</h2>
 
@@ -91,7 +91,7 @@
 		</div>
 		</main>
 		<footer>
-			<p>&copy; Matthew Waldrop, 2024</p>
+			<p>&copy; Matthew Waldrop, 2025</p>
 			<p>All rights reserved</p>
 		</footer>
 	</body>
